template/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/template/template.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/template/template.cpp:339:11: error: cannot bind non-const lvalue reference of type 'll&' {aka 'long long int&'} to an rvalue of type 'll' {aka 'long long int'}
  339 |     mod(n,2);
      |           ^
/Users/kakeshitamasamichi/Desktop/kyopro/template/template.cpp:186:20: note:   initializing argument 2 of 'void mod(ll&, ll&)'
  186 | void mod(ll &n,ll &p){
      |                ~~~~^
